# oxideq

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  prd.md  progress.md
.githooks/: pre-commit
.github/scripts/: crap-report.cjs
.github/workflows/: ci.yml
benches/: dsp.rs
docs/: macos.md
docs/superpowers/plans/: 2026-07-20-oxideq.md  2026-07-21-oversampling.md
docs/superpowers/specs/: 2026-07-21-oversampling-design.md
presets/: example.txt  koss_porta_pro.txt  meze_99_classics.txt
scripts/: bench_ab.py
src/: cli.rs  devices.rs  dsp.rs  engine.rs  lib.rs  main.rs  preset.rs  resample.rs  routing.rs
tests/: golden.rs  perf.rs  properties.rs
tests/data/: eq_in.f64  eq_out_44100_4x.f64  eq_out_48000_1x.f64  hb_taps_44100.f64  hb_taps_48000.f64  hb_taps_88200.f64  up2x_in.f64  up2x_out_48000.f64
tools/: gen_fixtures.py  measure_capture.sh  measure_report.py
