[package]
name = "oxideq"
version = "0.1.0"
edition = "2021"
description = "Bit-perfect parametric EQ pipeline for PipeWire and CoreAudio"

[dependencies]
anyhow = "1.0.104"
biquad = "0.6.0"
clap = { version = "4.6.3", features = ["derive"] }
cpal = "0.18.1"
regex = "1.13.1"
ringbuf = "0.5.1"

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "dsp"
harness = false
