[package]
name = "oxideq"
version = "0.1.0"
edition = "2024"
description = "Bit-perfect parametric EQ pipeline for PipeWire and CoreAudio"

[dependencies]
anyhow = "1.0.104"
biquad = "0.6.0"
clap = { version = "4.6.4", features = ["derive"] }
cpal = "0.18.1"
nom = "8.0.0"
ringbuf = "0.5.1"

[lints.clippy]
# Clippy pedantic on by default for the whole crate (all targets). CI and the
# pre-commit hook run `clippy --all-targets -- -D warnings`, so these gate PRs.
pedantic = { level = "warn", priority = -1 }
# DSP idioms deliberately allowed:
# - bit-perfect EQ asserts compare exact expected samples;
# - the pipeline does heavy sample-rate / index / coefficient float casts by
#   design, where TryFrom everywhere would bloat hot audio paths for no gain.
float_cmp = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
criterion = "0.8.2"
proptest = "1"

[[bench]]
name = "dsp"
harness = false
